syntax = "proto3";

package uims.ums.rpc;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "uims/api/ums/rpc";

service User {
    rpc GetUser(GetUserReq) returns (GetUserReply) {
        option (google.api.http) = {
            get: "/ums/user/{uid}"
        };
    }

    rpc GetUserByUsername(GetUserByUsernameReq) returns (GetUserByUsernameReply) {
        option (google.api.http) = {
            get: "/ums/user/{username}"
        };
    }

    rpc Save(SaveUserReq) returns (SaveUserReply) {
        option (google.api.http) = {
            post: "/ums/user/save"
            body: "*"
        };
    }

    rpc CreateUser(CreateUserReq) returns (CreateUserReply) {
        option (google.api.http) = {
            post: "/ums/user/create"
            body: "*"
        };
    }

    rpc ListUser(ListUserReq) returns (ListUserReply) {
        option (google.api.http) = {
            get: "/ums/user/list"
        };
    }
}

message GetUserReq {
    int64 uid = 1;
}

message GetUserReply {
    UserInfo user_info = 1;
}

message GetUserByUsernameReq {
    string username = 1;
}

message GetUserByUsernameReply {
    UserInfo user_info = 1;
}

message CreateUserReq {
    string username = 1;
    string password = 2;
}

message CreateUserReply {
    int64 id = 1;
    string username = 2;
}

message ListUserReq {
    int64 uid = 1;
    int64 page_size = 2;
    int64 page_num = 3;
    int64 status = 4;
    int64 del_flag = 5;
    string username = 6;
}

message ListUserReply {
    repeated UserInfo results = 1;
}

message SaveUserReq {
    string username = 1;
}

message SaveUserReply {
    UserInfo user_info = 1;
}

message UserInfo {
    int64 uid = 1;
    string real_name = 2;
    string user_name = 3;
    int64 phone = 4;
    string avatar = 5;
    int64 del_flag = 6;
    int64 status = 7;
    int64 origin_app_id = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

